# Swipytics

./: .gitignore  README.md  biome.json  demo.ipynb  eslint.config.js  index.html  install-draco.sh  log_analysis.ipynb  manifest.json  manifest.webmanifest  package.json  plugin.ts  pnpm-lock.yaml  pyproject.toml  registerSW.js  server.py  session_sequence.ipynb  survey_analysis.ipynb  sw.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml
.husky/: pre-commit
api/: State.py  __about__.py  __init__.py  app.py  load_data.py  main.py  state.py  store.py  test.py
api/charts/: __init__.py  barchart.py  heatmap.py  linechart.py  scatterplot.py
api/functions/: __init__.py  facts.py  get_charts.py  get_session.py  load_data.py
api/models/: Chart.py  Session.py  State.py  __init__.py  base.py  chart.py  chart_model.py  data_field.py  data_field_model.py  field_model.py  metadata_model.py  model_config.py  session.py  session_model.py
api/services/: __init__.py  browse_charts.py  chart.py  data.py  facts.py  get_chart.py  get_facts.py  get_manual_chart.py  get_next_chart.py  get_specs.py  recommendation.py  session.py  specs.py
api/utils/: __init__.py  chart.py  decorators.py  field_hash.py  field_name.py  find.py  getFileExtension.py  get_file_extension.py  get_time_stamp.py  get_timestamp.py  rescaler.py  sample.py  statistics.py
artifacts/: Jinja2-3.1.2-py3-none-any.whl  altair-5.0.0-py3-none-any.whl  annotated_types-0.6.0-py3-none-any.whl  attrs-23.1.0-py3-none-any.whl  cycler-0.11.0-py3-none-any.whl  entrypoints-0.4-py3-none-any.whl  fonttools-4.42.1-py3-none-any.whl  jsonschema-4.17.3-py3-none-any.whl  kiwisolver-1.4.4-cp311-cp311-emscripten_3_1_46_wasm32.whl  micropip-0.5.0-py3-none-any.whl  numpy-1.26.1-cp311-cp311-emscripten_3_1_46_wasm32.whl  pycparser-2.21-py2.py3-none-any.whl  pydantic-2.4.2-py3-none-any.whl  pyodide-lock.json  pyrsistent-0.19.3-cp311-cp311-emscripten_3_1_46_wasm32.whl  python_dateutil-2.8.2-py2.py3-none-any.whl  pytz-2023.3-py2.py3-none-any.whl  six-1.16.0-py2.py3-none-any.whl  threadpoolctl-3.2.0-py3-none-any.whl  toolz-tests.tar  typing_extensions-4.7.1-py3-none-any.whl  vega-datasets-tests.tar
assets/: index--WkZCD8C.js  index--vyCGab_.js  index-0K91LE7B.js  index-1lhyg9IW.js  index-3NTKBma8.js  index-3u_AQYq_.js  index-4Ye0ZDxJ.js  index-5WktPCyw.js  index-7fqeEc1X.js  index-80br1NIk.js  index-8NpDRpcJ.js  index-93wclY8i.js  index-9s4YnPQE.js  index-AKwAWCGv.js  index-AOfgKaHm.js  index-B-hTpfJ1.js  index-B1BYwsza.js  index-B489Fav_.js  index-B528WuiT.js  index-B6ULkNL8.js  index-BA678gPJ.js  index-BBvYkLl8.js  index-BD51kO8K.js  index-BI3FBkG2.js  index-BJW2Hch5.js  index-BJZAwZA8.js  index-BJzD7l8f.js  index-BKsL4NCt.js  index-BP2nCJQr.js  index-BPM92AYh.js  index-BXLfR83U.js  index-BaPlVHfH.js  index-BaqHZTqN.js  index-BbbjQRV_.js  index-BcEx0_YG.js  index-BcS4AP_O.js  index-BcfyXL8W.js  index-BdDqIbFH.js  index-BdT5coEc.js  index-BdTSwvRO.js  (+189 more)
assets/logs/: p1-logs-202411261225.json  p10-logs-202411271723.json  p11-logs-202411281132.json  p12-logs-202412020932.json  p13-logs-202412021028.json  p14-logs-202412021128.json  (+8 more)
data/: README.md  SeoulBikeData_ko_cleaned_5000.csv  SeoulBikeData_ko_cleaned_5000.json  SeoulBikeDataa_ko_cleaned_5000.csv  barley.json  cars_ko.csv  cars_ko.json  movies_ko.json
public/: manifest.json  manifest.webmanifest
src/: App.tsx  README.md  main.tsx  theme.ts  vite-env.d.ts
(+203 files in other folders)
